// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadHistory renders correctly 1`] = `
<div
  cardStyle="default"
  className="fd-card fd-read-history default"
>
  <h3
    className="fd-typography card-h h-read-history"
    textStyle="card-h"
  >
    Recent gelezen
  </h3>
  <nav>
    <a
      href="https://fd.nl"
    >
      <time>
        15:29
      </time>
      <span>
        title van nieuwsbericht
      </span>
    </a>
  </nav>
</div>
`;

exports[`ReadHistory renders correctly 2`] = `
<div
  cardStyle="article"
  className="fd-card fd-read-history class-name article"
>
  <h3
    className="fd-typography card-h h-read-history"
    textStyle="card-h"
  >
    Recent gelezen blokje
  </h3>
  <nav>
    <a
      href="https://fd.nl"
      target="_blank"
    >
      <time>
        15:29
      </time>
      <span>
        title van nieuwsbericht
      </span>
    </a>
  </nav>
</div>
`;
